--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h1>Hello World</h1>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Excepturi consectetur, perferendis natus aperiam expedita architecto recusandae ab ipsam quidem error veritatis nisi minus vero illum quas adipisci tempora! Sunt, at.</p>
 </body>
 </html>
