--- a/index.html
+++ b/index.html
@@ -8,5 +8,9 @@
 <body>
     <h1>Hello World</h1>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Excepturi consectetur, perferendis natus aperiam expedita architecto recusandae ab ipsam quidem error veritatis nisi minus vero illum quas adipisci tempora! Sunt, at.</p>
+    <ul>
+        <li>Abc</li>
+        <li>Def</li>
+    </ul>
 </body>
 </html>
